Core/objects/Recommended_Trail__c/Recommended_Trail__c.object-meta.xml
<CustomObject>
    <label>Recommended Trail</label>
    <nameField>
        <displayFormat>RT-{0000000}</displayFormat>
        <label>Recommended Trail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Trails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>