Core/objects/Recommended_Trail__c/fields/Badge_Icon__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon__c</fullName>
    <description>Rendered icon for the corresponding trailheadapp__Trail__c.</description>
    <formula>IMAGE( Icon__c , TrailName__c , 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trail Icon</label>
    <type>Text</type>
</CustomField>