Core/objects/Recommended_Trail__c/fields/HyperlinkedName__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkedName__c</fullName>
    <description>Hyperlink of Trail Name to URL for trail on Trailhead.</description>
    <formula>HYPERLINK( URL__c , TrailName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hyperlinked Name</label>
    <type>Text</type>
</CustomField>