Core/objects/Recommended_Trail__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Value of the trailheadapp__Level__c field on corresponding trailheadapp__Trail__c.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level</valueSetName>
    </valueSet>
</CustomField>