Core/objects/Recommended_Trail__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <formula>Trail__r.trailheadapp__Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products</label>
    <type>Text</type>
</CustomField>