Core/objects/Recommended_Trail__c/fields/Test_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Test External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>