Core/objects/Recommended_Trail__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail</label>
    <referenceTo>trailheadapp__Trail__c</referenceTo>
    <relationshipLabel>Recommended Trails</relationshipLabel>
    <relationshipName>Recommended_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>