Core/objects/Recommended_Trail__c/fields/Trail_Name__c.field-meta.xml
<CustomField>
    <fullName>Trail_Name__c</fullName>
    <formula>Trail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trail Name</label>
    <type>Text</type>
</CustomField>