Core/objects/Recommended_Trail__c/fields/TrailAPIName__c.field-meta.xml
<CustomField>
    <fullName>TrailAPIName__c</fullName>
    <description>Value of the trailheadapp__API_Name__c field on the corresponding trailheadapp__Trail__c record.</description>
    <label>Trail API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>