Core/objects/Recommended_Trail__c/fields/TrailName__c.field-meta.xml
<CustomField>
    <fullName>TrailName__c</fullName>
    <description>Value of the Name field on the corresponding trailheadapp__Trail__c.</description>
    <label>Trail Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>